# SmartWatermelonSystem

./: README.md
FieldAcquisitionTerminal/: config.h  platformio.ini
FieldAcquisitionTerminal/src/: main.cpp
FieldAcquisitionTerminal/src/algorithm/: sugar_calc.h
FieldAcquisitionTerminal/src/display/: lvgl_ui.cpp  lvgl_ui.h
FieldAcquisitionTerminal/src/network/: HttpClient.cpp  HttpClient.h
FieldAcquisitionTerminal/src/sensor_driver/: BuzzerManager.cpp  BuzzerManager.h  RTCManager.cpp  RTCManager.h  SensorManager.cpp  SensorManager.h
FieldAcquisitionTerminal/src/storage/: StorageManager.cpp  StorageManager.h
FieldDataProcessingServer/: CMakeLists.txt
FieldDataProcessingServer/sql/: init_db.sql  insert_test_data.sql
FieldDataProcessingServer/src/: main.cpp
FieldDataProcessingServer/src/auth/: AdminAuth.cpp  AdminAuth.h  DeviceAuth.cpp  DeviceAuth.h
FieldDataProcessingServer/src/data_process/: DataCheck.cpp  DataCheck.h  MaturityCalc.cpp  MaturityCalc.h  SugarCalc.cpp  SugarCalc.h
FieldDataProcessingServer/src/db/: MySQLDriver.cpp  MySQLDriver.h
FieldDataProcessingServer/src/http_server/: HttpServer.cpp  HttpServer.h  Router.cpp  Router.h
FieldDataProcessingServer/src/session/: Session.cpp  Session.h
FieldDataProcessingServer/src/utils/: PasswordHasher.cpp  PasswordHasher.h
FieldMonitoringPlatform/: index.html
FieldMonitoringPlatform/admin/: dashboard.html  login.html
FieldMonitoringPlatform/admin/css/: style.css
FieldMonitoringPlatform/admin/js/: api.js  auto_switch.js  chart.js
docs/: SWS开发者文档.md  SWS开发者文档_v1.0.md  SWS需求文档_v1.0.md  前端开发者文档.md  实验数据.txt  开发者文档.md  模型.md  毕业论文初稿_1.md  毕业论文初稿_2.md  西瓜光谱数据-11.5.txt  西瓜光谱数据-6.8.txt  西瓜光谱数据-8.7.txt  西瓜光谱数据-9.3.txt  论文框架.md  论文框架_1.md  论文框架_2.md  设备端开发者文档.md  需求文档.md  项目概论.md
